Added New Windows, and Multiple Features

--- a/NCOrganizer/NCOrganizer/MainWindow.xaml
+++ b/NCOrganizer/NCOrganizer/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NCOrganizer"
         mc:Ignorable="d"
-        Title="Note Card Organizer" Height="450" Width="800">
-    <Grid>
+        Title="Note Card Organizer - Max Hendricks" Height="450" Width="800">
+    <Grid Background="LightSlateGray">
+        <Button Content="Show Notecards" FontSize ="16" HorizontalAlignment="Center" Height="89"  VerticalAlignment="Center" Width="123" Background="White" RenderTransformOrigin="0.504,0.537" Click="Button_Click"/>
         
     </Grid>
+
+
 </Window>
