--- a/NCOrganizer/NCOrganizer/notepadScreen.xaml
+++ b/NCOrganizer/NCOrganizer/notepadScreen.xaml
@@ -9,6 +9,8 @@
     <Grid Background="LightSlateGray">
         <Button Content="Home" FontSize="20" Background="White" HorizontalAlignment="Left" Height="55"  VerticalAlignment="Bottom" Width="114" Click="Home_Click"/>
         <Button Content="Add Card" FontSize="20" Background="White" HorizontalAlignment="Right" Height="55"  VerticalAlignment="Bottom" Width="110" Click="Add_Card" Margin="0,0,-0.4,0"/>
+        <Button Content="Set Path" FontSize="20" Background="White" HorizontalAlignment="Center" Height="55" VerticalAlignment="Bottom" Width="110" Click="Set_Path" Margin="411,0,272.6,0"/>
+        <Button Content="Get Path" FontSize="20" Background="White" HorizontalAlignment="Center" Height="55" VerticalAlignment="Bottom" Width="110" Click="Set_Path" Margin="275,0,408.6,0"/>
         <StackPanel HorizontalAlignment="Left" Height="300" Margin="66,33,0,0" VerticalAlignment="Top" Name="StackPack1" Width="148">
             <StackPanel.Resources>
                 <Style TargetType="{x:Type Button}">
